Fix overlap with supplier icons

--- a/src/assets/scss/layouts/mobile/_index.scss
+++ b/src/assets/scss/layouts/mobile/_index.scss
@@ -103,6 +103,8 @@
   .fa-times {
     font-size: 20px !important;
     font-weight: 900 !important;
+    top: 15px !important;
+      }
   }
 }
 
